// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem props :disabled 1`] = `
<div
  class="t-default-menu t-menu-mode__normal t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <!---->
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-is-active t-is-disabled t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          <!---->
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`MenuItem props :name 1`] = `
<div
  class="t-default-menu t-menu-mode__normal t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <!---->
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
        name="1-1"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          <!---->
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`MenuItem props :route 1`] = `
<div
  class="t-default-menu t-menu-mode__normal t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <!---->
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
        route="/user/list"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          <!---->
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`MenuItem slot <default> 1`] = `
<div
  class="t-default-menu t-menu-mode__normal t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <!---->
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          <!---->
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;

exports[`MenuItem slot <icon> 1`] = `
<div
  class="t-default-menu t-menu-mode__normal t-menu--light"
  style="height: 100%; width: 232px;"
>
  <div
    class="t-default-menu__inner"
  >
    <!---->
    <ul
      class="t-menu t-menu--scroll narrow-scrollbar"
    >
      
      <li
        class="t-menu__item t-is-active t-menu__item--plain"
      >
        <!---->
        <span
          class="t-menu__content"
        >
          <!---->
        </span>
      </li>
      
    </ul>
    <!---->
  </div>
</div>
`;
